--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,56 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="public/style.css">
 </head>
+<body>
 
+<h1>create</h1>
+<div class="create" id="create">
     <form action="" method="post">
-        <input type="text" id="username">
-        <input type="text" id="name">
-        <input type="text" id="password">
-        <input type="text" id="email">
-        <input type="text" id="address">
+        <input type="text" disabled placeholder="username" id="username"><br>
+        <input type="text" placeholder="name" id="name"><br>
+        <input type="text" placeholder="password" id="password"><br>
+        <input type="text" placeholder="email" id="email"><br>
+        <input type="text" placeholder="address" id="address"><br>
+        <input type="button" value="submit" id="submit">
     </form>
+</div>
+
+   <h2>read</h2>
+<div class="read" id="read">
+    <form action="" method="post">
+        <input type="text" placeholder="username" id="username"><br>
+        <input type="text" disabled placeholder="name" id="name"><br>
+        <input type="text" disabled placeholder="password" id="password"><br>
+        <input type="text" disabled placeholder="email" id="email"><br>
+        <input type="text" disabled placeholder="address" id="address"><br>
+        <input type="button" value="submit" id="submit">
+    </form>
+</div>
+
+<h1>update</h1>
+<div class="update" id="update">
+    <form action="" method="post">
+        <input type="text" placeholder="username" id="username"><br>
+        <input type="text" placeholder="name" id="name"><br>
+        <input type="text" placeholder="password" id="password"><br>
+        <input type="text" placeholder="email" id="email"><br>
+        <input type="text" placeholder="address" id="address"><br>
+        <input type="button" value="submit" id="submit">
+    </form>
+</div>
+
+<h1>delete</h1>
+<div class="delete" id="delete">
+    <form action="" method="post">
+        <input type="text" placeholder="username" id="username"><br>
+        <input type="text" placeholder="name" id="name"><br>
+        <input type="text" placeholder="password" id="password"><br>
+        <input type="text" placeholder="email" id="email"><br>
+        <input type="text" placeholder="address" id="address"><br>
+        <input type="button" value="submit" id="submit">
+    </form>
+</div>
+    
     <script src="public/app.js"></script>
 </body>
 </html>
