--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <h1>create</h1>
 <div class="create" id="create">
     <form action="" method="post">
-        <input type="text" disabled placeholder="username" id="username"><br>
+        <input type="text" placeholder="username" id="username"><br>
         <input type="text" placeholder="name" id="name"><br>
         <input type="text" placeholder="password" id="password"><br>
         <input type="text" placeholder="email" id="email"><br>
